[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Filepopup.png" type="Texture" id=1]
[ext_resource path="res://fonts/Mine_craft_dynamicform.tres" type="DynamicFont" id=2]
[ext_resource path="res://Objects/Interview_form.gd" type="Script" id=3]

[node name="Interview_Form" type="Node2D" groups=["form"]]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 1.0
margin_right = 227.0
margin_bottom = 230.0
texture = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="TextureRect"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 113.0
margin_top = 38.0
margin_right = 212.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 2 )
text = "Name:"

[node name="Label2" type="Label" parent="TextureRect"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 113.0
margin_top = 58.0
margin_right = 212.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 2 )
text = "Skills"

[node name="Label3" type="Label" parent="TextureRect"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 113.0
margin_top = 81.0
margin_right = 212.0
margin_bottom = 99.0
custom_fonts/font = ExtResource( 2 )
text = "Ethnicity"

[node name="Label4" type="Label" parent="TextureRect"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 114.0
margin_top = 106.0
margin_right = 213.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 2 )
text = "Blood group:"

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
margin_left = 42.0
margin_top = 43.0
margin_right = 100.0
margin_bottom = 101.0

[node name="Control" type="Control" parent="."]
margin_left = 12.0
margin_top = 160.0
margin_right = 210.0
margin_bottom = 223.0

[node name="Hired" type="Button" parent="Control" groups=["formbuttons"]]
margin_left = 2.0
margin_top = 32.0
margin_right = 77.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 2 )
text = "Hire"

[node name="Reject" type="Button" parent="Control" groups=["formbuttons"]]
margin_left = 114.0
margin_top = 31.0
margin_right = 186.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
text = "Rejct"

[node name="Close" type="Button" parent="Control" groups=["formbuttons"]]
margin_left = 183.0
margin_top = -143.0
margin_right = 201.0
margin_bottom = -129.0
custom_fonts/font = ExtResource( 2 )
text = "X"
